portefaix-policies-0.7.0/kyverno/M0002-metadata-annotations/policy-M0002.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-M0002
  annotations:
    policies.kyverno.io/title: Metadata should have a8r.io annotations
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Metadata
    policies.kyverno.io/description: >-
      Metadata should have all the expected a8r.io annotations
      See: https://ambassadorlabs.github.io/k8s-for-humans/
spec:
  validationFailureAction: audit
  rules:
  - name: check-for-a8r.io-annotations
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "a8r.io annotations is required."
      pattern:
        metadata:
          annotations:
            a8r.io/description: "?*"
            a8r.io/owner: "?*"
            a8r.io/bugs: "?*"
            a8r.io/documentation: "?*"
            a8r.io/repository: "?*"
            a8r.io/support: "?*"
